# nfd-unity3d

./: .braids  .gitignore  CMakeLists.txt  README.md  nativefiledialog.patch  omnisharp.json
Assets/: nfd-demo.unity
Assets/nfd/Scenes/: nfd-demo.unity
Assets/nfd/Scripts/nfd/: FileDialog.cs  NativeFileDialog.cs
ProjectSettings/: EditorSettings.asset  ProjectSettings.asset
nativefiledialog/src/: nfd_common.h
nativefiledialog/src/include/: nfd.h
